<resources>
    <string name="app_name">EMCB</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="nfctag">NFCTag</string>
    <string name="current_setting">Current Setting</string>
    <string name="semicolon">:</string>
    <string name="slave_id">Slave ID</string>
    <string name="cut_off_period">Cut-off Period</string>
    <string name="on_off_setting">On/Off Setting</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="owner_name">Owner Name</string>
    <string name="nfc_bootloader">NFC Bootloader</string>
    <string name="read_memory">Read Memory</string>
    <string name="write_memory">Write Memory</string>
    <string name="uid">UID</string>
    <string name="select_hex_file">Select .hex File</string>
    <string name="hex_filename">Hex Filename :</string>
    <string name="blank">-</string>
    <string name="hex_file_data">Hex File Data</string>
    <string name="tag_bootloader">Tag Bootloader</string>
    <string name="modify_tag_eeprom_settings">Modify Tag EEPROM Settings</string>
    <string name="mailbox_enabled">Mailbox enabled</string>
    <string name="mailbox_disabled">Mailbox disabled</string>
    <string name="command_successful">Command successful</string>
    <string name="command_failed">Command failed!</string>
    <string name="error_during_password_presentation">Error during password presentation!</string>
    <string name="tag_not_in_the_field">Tag not in the field</string>
    <string name="no_response_received">No response received!</string>
    <string name="failed_to_retrieve_board_name">Failed to retrieve the board name and FW version. Please update the firmware of the board to the latest version.</string>
    <string name="please_put_the_phone_on_the_discovery_board">Please put the phone on the Discovery board</string>
    <string name="ftm_status">FTM Status: </string>
    <string name="idle">Idle</string>
    <string name="writing">Writing</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>

    <string name="bt_not_enabled_leaving">User declined to enable Bluetooth, exiting Bluetooth Advertisements.</string>
    <string name="activity_main_title">Nearby Devices</string>
    <string name="broadcast_device">Broadcast Device</string>

    <string name="bt_not_supported">Bluetooth is not supported on this device.</string>
    <string name="bt_ads_not_supported">Bluetooth Advertisements are not supported on this device.</string>

    <string name="start_error_prefix">Start Advertising failed: </string>
    <string name="start_error_already_started">already started.</string>
    <string name="start_error_too_large">data packet exceeded 31 Byte limit.</string>
    <string name="start_error_unsupported">not supported on this device.</string>
    <string name="start_error_internal">internal error.</string>
    <string name="start_error_too_many">too many advertisers.</string>
    <string name="bt_null">Error: Bluetooth object null</string>
    <string name="last_seen">Last Seen:</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">minute ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="empty_list">No devices found - refresh to try again.</string>
    <string name="seconds">seconds.</string>
    <string name="scan_start_toast">Scanning for</string>
    <string name="already_scanning">Scanning already started.</string>
    <string name="no_name">(no name)</string>
    <string name="start_error_unknown">unknown error</string>
    <string name="advertising_timedout">Advertising stopped due to timeout.</string>
    <string name="deng_kai_sdn_bhd">Deng Kai Sdn Bhd</string>
    <string name="connect">Connect</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting…</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="refresh">Refresh</string>
    <string name="r">R</string>
    <string name="write_hex">Write Hex</string>
    <string name="write_file">Write File</string>
    <string name="reader">Reader</string>
    <string name="tag_number">Tag Number</string>
    <string name="reader_number">Reader Number</string>
    <string name="tag_status">Tag Status</string>
    <string name="current_reading_a">Current Reading (A)</string>
    <string name="write">Write</string>
    <string name="read">Read</string>
    <string name="nfc_tap_mode">NFC Tap Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_setting_a">Current Setting</string>
    <string name="cut_off_period_s">Cut-off Period</string>
    <string name="uidTextViewHint">TAP NFC TO READ DATA</string>
</resources>