<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ftmBootloaderActivity"
    tools:context=".NFCTag.NfcBootloaderActivity">

    <LinearLayout
        android:id="@+id/selectFileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/selectFileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:text="@string/select_hex_file" />

        <Button
            android:id="@+id/writeFileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:text="@string/write_file"/>

        <LinearLayout
            android:id="@+id/filenameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/hexFilenameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hex_filename"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/hexSelectFilenameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mailboxStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mailbox_disabled"
                android:textColor="@color/red"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ftmStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ftm_status"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/ftmStatusProgressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/idle"
                android:paddingStart="8sp"
                android:paddingEnd="8sp"/>

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

        </LinearLayout>

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/st_light_grey"
            android:progressTint="@color/st_light_blue"
            android:secondaryProgressTint="@color/st_light_blue"/>

        <TextView
            android:id="@+id/fileData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/filenameLayout"
            android:hint="@string/hex_file_data"
            android:scrollbars="vertical"
            android:textSize="6sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>